# pimseqs2

./: CMakeLists.txt
cmake/: FindUPMEM.cmake
lib/dpu/: CMakeLists.txt  DpuCommunicationManager.cpp  DpuCommunicationManager.h  DpuPrefilterHostPipeline.cpp  DpuPrefilterHostPipeline.h  DpuStructures.h
lib/dpu/kernels/: CMakeLists.txt  gapped_prefilter.c  kmer_prefilter.c  ungapped_prefilter.c
scripts/: build_run_compare.sh  test_all_modes.sh
src/: CMakeLists.txt
src/commons/: Parameters.cpp  Parameters.h
src/prefiltering/: Prefiltering.cpp  ungappedprefilter.cpp
src/test/: CMakeLists.txt  TestDpuSmoke.cpp
test/dpu/: CMakeLists.txt  dpu_smoke.cpp
